# asp_therm

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt  CMakeSettings.json  main.cpp
core/common/: CMakeLists.txt  common.h  models_errors.cpp  models_errors.h  models_math.cpp  models_math.h  xml_reader.h
core/gas_parameters/: CMakeLists.txt  examples.cpp  examples.h  gas_description.cpp  gas_description.h  gas_description_dynamic.cpp  gas_description_dynamic.h  gas_description_static.cpp  gas_description_static.h  gas_dynamic_update.h  gas_mix_init.cpp  gas_mix_init.h  init_by_file.cpp  init_by_file.h
core/models/: CMakeLists.txt  model_general.cpp  model_general.h  model_ideal_gas.cpp  model_ideal_gas.h  model_peng_robinson.cpp  model_peng_robinson.h  model_redlich_kwong.cpp  model_redlich_kwong.h  models_creator.cpp  models_creator.h
core/phase_diagram/: CMakeLists.txt  phase_diagram.cpp  phase_diagram.h  phase_diagram_models.cpp  phase_diagram_models.h
core/subroutins/: CMakeLists.txt  file_reading.cpp  file_reading.h  inputdata_by_file.cpp  inputdata_by_file.h  load_config.cpp  load_config.h  models_output.h  xml_reader.cpp  xml_reader.h
core/target_sys/: CMakeLists.txt
